force-app/main/default/objects/leaseworks__Department_Default__c/leaseworks__Department_Default__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Department Default</label>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Department Defaults</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>