force-app/main/default/objects/leaseworks__Department_Default__c/fields/leaseworks__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User from this department all new Deals will be assigned to by default.
Leave empty if this should be assigned individually on each new Deal.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>