force-app/main/default/objects/leaseworks__Department_Default__c/fields/leaseworks__Deal_Types__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deal_Types__c</fullName>
    <label>Deal Types Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>