force-app/main/default/objects/leaseworks__Department_Default__c/fields/leaseworks__Notify_Dept_on_Complete__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Notify_Dept_on_Complete__c</fullName>
    <inlineHelpText>The Assigned To person of the chosen departments will get an email notification when THIS department flag is changed to Complete</inlineHelpText>
    <label>Notify Dept. on Complete</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__NotifyToDeptList_GP</valueSetName>
    </valueSet>
</CustomField>