force-app/main/default/objects/leaseworks__Department_Default__c/fields/leaseworks__Setup__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Setup__c</fullName>
    <label>Setup</label>
    <referenceTo>leaseworks__Lessor__c</referenceTo>
    <relationshipName>LOI_Input_Depts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>