force-app/main/default/objects/leaseworks__Department_Default__c/fields/leaseworks__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>