force-app/main/default/objects/leaseworks__Department_Default__c/fields/leaseworks__Uncomplete_on_new_revision__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Uncomplete_on_new_revision__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Uncomplete on new revision</label>
    <type>Checkbox</type>
</CustomField>