force-app/main/default/objects/leaseworks__Department_Default__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Assigned_To__c</columns>
    <columns>leaseworks__Recipients_on_Complete__c</columns>
    <columns>leaseworks__Deal_Types__c</columns>
    <columns>leaseworks__Final_Notification__c</columns>
    <columns>leaseworks__Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>